# taskRag

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  PRD.md  README.md  TaskRAG_AI_Development_Document.md  TaskRAG_Optimization_Roadmap_AI.md  TaskRAG_v1.3_plus_New_Feature_Implementation_AI.md  TaskRAG_v1.3_plus_Surprise_Features_AI_Dev_Doc.md  docker-compose.server.yml
backend/: Dockerfile  celerybeat-schedule  inject_demo_papers.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_intelligence_layer.py  0003_research_ext.py  0004_claims_conflicts_signals.py  0005_hypotheses_chatmode.py  0006_comparison_writing.py  0007_graph_glossary_export.py  0008_llm_usage_logs.py  0009_chunks_fts.py  0010_chat_session_summaries.py  0011_method_timeline.py  0012_user_admin_flags.py  0013_annotations.py  0014_chunk_parent_id.py  0015_chunk_context_summary.py  0016_eval_tables.py  0017_user_doc_favorite_index.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: admin.py  admin_eval.py  agent.py  annotations.py  auth.py  briefings.py  citations.py  comparisons.py  conflicts.py  discover.py  documents.py  exports.py  glossary.py  graph.py  hypotheses.py  insights.py  methods.py  notes.py  notifications.py  pulses.py  qa.py  qa_cross.py  reading_paths.py  recommendations.py  settings_route.py  signals.py  tasks.py  topics.py  translation.py  trends.py  writing.py
backend/app/collectors/: __init__.py  arxiv_collector.py  base.py  openalex_collector.py  registry.py  semantic_scholar_collector.py
backend/app/core/: config.py  constants.py  errors.py  logging.py  observability.py  security.py
backend/app/db/: base.py  session.py
backend/app/db/models/: __init__.py  annotation.py  chat.py  document.py  eval.py  intel.py  notification.py  observability.py  research_ext.py  task.py  topic.py  user.py
backend/app/db/repositories/: chat_repo.py  document_repo.py  intel_repo.py  notification_repo.py  research_ext_repo.py  task_repo.py  topic_repo.py  user_repo.py
backend/app/eval/: add_question.py  faithfulness.py  metrics.py  run_eval.py  seed_from_chats.py  seed_from_chunks.py
backend/app/indexer/: chunker.py  cleaner.py  embedder.py  ingest_service.py  parser_pdf.py  qdrant_client.py
backend/app/notifications/: workflow.py
backend/app/notifications/channels/: email.py  inapp.py  webhook_placeholder.py
backend/app/rag/: chat_modes.py  llm_client.py  prompt.py  query_router.py  reranker.py  retriever.py
backend/app/schemas/: admin.py  annotation.py  auth.py  briefing.py  document.py  notification.py  picker.py  qa.py  research_ext.py  settings.py  task.py  topic.py
backend/app/services/: agent.py  auth_service.py  briefing_service.py  citation_graph_service.py  claim_service.py  comparison_service.py  conflict_service.py  contextual_retrieval.py  crag.py  discover_expansion.py  discover_service.py  email_service.py  export_service.py  gap_service.py  glossary_service.py  graph_service.py  graphrag.py  hypothesis_service.py  json_llm.py  memory_service.py  method_timeline_service.py  picker_service.py  pulse_service.py  qa_cross_service.py  qa_service.py  query_rewrite.py  reading_path_service.py  recommendation_service.py  self_rag.py  signal_service.py  term_extraction.py  topic_service.py  translation_service.py  trend_service.py  verification_code_service.py  writing_service.py
backend/app/tasks/: celery_app.py  collect_tasks.py  index_tasks.py  intel_tasks.py  notification_tasks.py  research_tasks.py  schedule_tasks.py  task_helpers.py
backend/app/tests/: conftest.py
backend/app/tests/unit/: test_arxiv_id_normalization.py  test_chat_modes.py  test_citation_graph.py  (+17 more)
backend/scripts/: backfill_chunks.py
(+95 files in other folders)
