[project]
name = "taskrag-backend"
version = "0.1.0"
description = "TaskRAG backend - per-topic research RAG demo"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "sse-starlette>=2.1",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-multipart>=0.0.9",
    # DB
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    # Auth
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    # Vector / RAG
    "qdrant-client>=1.10",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-text-splitters>=0.3",
    "tiktoken>=0.7",
    # HTTP / clients
    "httpx>=0.27",
    "openai>=1.40",
    # Data sources / parsing
    "arxiv>=2.1",
    "pymupdf>=1.24",
    "readability-lxml>=0.8.1",
    "lxml[html_clean]>=5.2",
    "feedparser>=6.0",
    # Celery
    "celery[redis]>=5.4",
    "redis>=5.0",
    # Misc
    "tenacity>=8.3",
    "structlog>=24.1",
    "email-validator>=2.1",
    "jinja2>=3.1",
    # v1.4 observability + security
    "sentry-sdk[fastapi,celery,sqlalchemy]>=2.10",
    "prometheus-client>=0.20",
    "prometheus-fastapi-instrumentator>=7.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
    "E501",  # line too long — formatter handles this where it matters
    "B008",  # function call in default argument (FastAPI Depends pattern)
    "UP007", # X | Y for typing — already use
]

[tool.ruff.lint.per-file-ignores]
"app/tests/*" = ["F401", "F811"]
"alembic/versions/*" = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
check_untyped_defs = false
strict_optional = false
